# defect_detection

./: .gitignore  .gitmodules  LICENSE  README.md
ImgClassifier/: README.md  convert2onnx.py  dataloader.py  demo.py  main.py  model.py  test.py  train.py  utils.py
ImgClassifier/losses/: focal_loss.py
ImgClassifier/models/: ResNet34.py  ResNet50.py  VGG16.py  efficientnet.py  resnet.py  vgg.py
ImgClassifierSelfAttention/: dataloader.py
ImgClassifierSelfAttention/models/: resnet.py  vgg.py
InferenceBackendSystem/: ImgClassifier.hpp
app/: README.md  main.py
app/cfgs/: AI_System.cfg  ResNet50_ImgClassifier.json  app.cfg
app/dd/backend/cpp/: CMakeLists.txt  DdInference.py  ImgClassifier.hpp  README.md  TrtEngine.hpp  arcface_trt.cpp  arcface_trt.hpp  test.cpp
app/dd/backend/cpp/src/: ApiImgInfer.cpp  ApiImgInfer.hpp  ApiImgInferData.hpp  Datum.cpp  Datum.hpp  DdApiTest.cpp  ImgClassifier.cpp  ImgClassifier.hpp  ImgClassifierTest.cpp  InferenceManager.cpp  InferenceManager.hpp  ResultsSender.cpp  ResultsSender.hpp  SystemManager.cpp  SystemManager.hpp  TrtEngine.cpp  TrtEngine.hpp  TrtEngineGenerator.cpp  TrtUtils.cpp  TrtUtils.hpp  cWrapper.cpp  cWrapper.h  macros.hpp  test.cpp  use_image_classifier.cpp
app/dd/backend/py/: ImgClassifier.py  dnn.py
app/dd/cpp/: TensorRTEngine.hpp  utils.hpp
app/dd/py/: ImgClassifier.py  dnn.py
app/dd/ui/: mainWindow.py
app/dd/ui/template/: MainWindow.py  MainWindow.ui  QClickableLabel.py  __init__.py
app/ui/: mainWindow.py
app/ui/template/: MainWindow.py  MainWindow.ui
dataset/road_crack/tools/: compute_mean_stds.py
dataset/tools/: magnetic_tile_dataset_augmentator.py  road_crack_dataset_augmentator.py
dev/: README.md
dev/ImgClassifier/: README.md  backup_note.txt  check_num_train_param.py  convert2onnx.py  dataloader.py  demo.py  main.py  model.py
dev/ImgClassifier/models/: efficientnet.py
dev/ImgClassifierSelfAttention/: Train.py  backup_note.txt  demo.py  main.py  model.py  reference.py
dev/ImgSegmentation/: dataloader.py  model.py
dev/ImgSegmentationSelfAttention/: main.py  model.py
dev/ObjectDetection/: check_num_train_param.py  convert2onnx.py  dataset.py  loss.py  model.py  test.py  train.py
dev/ObjectDetection/models/: backbone_efficientnet.py  neck_bifpn.py  ning.py
dev/ObjectDetection/utils/: metrics.py
dev/SSA_Classifier/: dataloader.py  main.py  model.py
dev/dataset/magnetic_tile/tools/: CreateSplitTxt.py
dev/dataset/tools/: magnetic_tile_dataset_augmentator.py  unknown_road_crack_dataset_augmentator.py
dev/models/backbone/: efficientnet.py  mobilenetv3.py  resnet.py  vgg.py
dev/models/neck/: bifpn.py  mdf_bifpn.py
